# python-query

./: .flake8  .mypy.ini  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
python_query/: main.py  query.py  query_cache.py  utils.py
tests/: test_query.py  test_query_cache.py
