[project]
name = "pyquery"
version = "v0.0.1-beta01"
dependencies = []
requires-python = ">=3.11"
authors = [
  {name = "Nuno Antunes", email = "afonso.antunes@live.com.pt"},
]
maintainers = [
  {name = "Nuno Antunes", email = "afonso.antunes@live.com.pt"},
]
description = "Like React Query but for Python"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["query", "react-query", "python"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
dev = ["mypy", "flake8", "build", "autopep8", "pytest"]
test = ["pytest", "pytest-asyncio", "pytest-cov", "coverage"]
lint = ["mypy", "flake8", "build"]

[tool.pytest.ini_options]
addopts = "-v --cov=python_query --cov=tests"

[tool.autopep8]
max-line-length = 75
aggressive = 3
